Prefer to hide UI elements with display: none instead of visibility: hidden. This solves the issue where OS widgets interfere with mouse selection on canvas.

--- a/css/ui-message.css
+++ b/css/ui-message.css
@@ -15,7 +15,7 @@
 	background-image: url('../resources/ui/dialogs/ui-message/images/ui-message.png');
 	z-index:99;
 	overflow-y: auto;
-	visibility: hidden;
+	display: none;
 	overflow: hidden;
 }
 
